--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,12 @@ body {
 
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #1a1a2e;
+  background-color: white;
 }
 
 ::-webkit-scrollbar {
   width: 10px;
-  background-color: #1a1a2e;
+  background-color: #ff7800;
 }
 
 ::-webkit-scrollbar-thumb {
